arrest controller update
